# rustwell

./: .gitignore  Cargo.toml  LICENSE  README.md  brick.fountain  lol.fountain  lol.typ  västfronten.fountain
crates/rustwell/: Cargo.toml  README.md
crates/rustwell-cli/: Cargo.toml  README.md
crates/rustwell-cli/src/: main.rs
crates/rustwell/src/: export.rs  lib.rs  parser.rs  rich_string.rs  screenplay.rs  statistics.rs
crates/rustwell/src/export/: html.rs  pdf.rs  style.css  styles.rs  template.typ  typst.rs
licenses/: Apache-2.0-celluloid.txt
