[package]
name = "rustwell-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A CLI tool for parsing and compiling fountain screenplay scripts."
repository = "https://github.com/frblo/rustwell"
keywords = ["fountain", "screenplay", "stageplay"]
categories  = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "rustwell"
path = "src/main.rs"

[dependencies]
rustwell = { version = "0.1.0", path = "../rustwell" }
clap = { version = "4.5", features = ["derive"]}
color-eyre = "0.6"
